--- a/static/partials/main.html
+++ b/static/partials/main.html
@@ -1,35 +1,41 @@
-<div class="span12">
-	<div class="row-fluid">
-		<div class="span4">
-			<h2>
-				Heading
-			</h2>
-			<p>
-			Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-		<div class="span4">
-			<h2>
-				Heading
-			</h2>
-			<p>
-			Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-		<div class="span4">
-			<h2>
-				Heading
-			</h2>
-			<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
-			</p>
+<div class="row-fluid">
+	<div class="span12">
+		<div class="row-fluid">
+			<div class="span4">
+				<h2>Statistik
+					
+				</h2>
+				<p>
+					Wie viele Datensätze beiehen sich auf Wien?
+					Wie viele Datensätze gibt es von der Statistik Austria?
+				</p>
+				<p>
+					<a class="btn" href="#/statistic">Statistik »</a>
+				</p>
+			</div>
+			<div class="span4">
+				<h2>
+					Inkonsistenzen
+				</h2>
+				<p>
+					Wo gibt es nach Auswertung möglicherweise Fehler in den Datensätzen?
+					Welche Metadatensätze entsprechen nicht der Metadatenkonvention?
+				</p>
+				<p>
+					<a class="btn" href="#/tocheck">Auswertung »</a>
+				</p>
+			</div>
+			<div class="span4">
+				<h2>
+					Entwicklung der Datensätze
+				</h2>
+				<p>
+					Wann wurden die letzen Datensätze geändert?
+				</p>
+				<p>
+					<a class="btn" href="#/history">Historie »</a>
+				</p>
+			</div>
 		</div>
 	</div>
-</div>
+</div>	
