--- a/static/css/custom-grid.css
+++ b/static/css/custom-grid.css
@@ -3,3 +3,14 @@
     width: 100%; 
     height: 300px
 }
+/*
+ // You can use this to set the height of the ng-grid dynamically depending on the number of rows
+.ngViewport.ng-scope{
+    height: auto !important;
+    overflow-y: hidden;
+}
+
+.ngTopPanel.ng-scope, .ngHeaderContainer{
+    width: auto !important;
+}
+*/
