--- a/static/partials/statistic.html
+++ b/static/partials/statistic.html
@@ -1,59 +1,61 @@
-<div class="span12">
-	<div ng-controller="TaxonomyControll">
-		<div class="row-fluid">
-			<div class="span6">
-				<div ng-show="entities.active()">
-					<img src="/static/images/round_spinner.png" alt="spinner"/>
+<div class="row-fluid">
+	<div class="span12">
+		<div ng-controller="TaxonomyControl">
+			<div class="row-fluid">
+				<div class="span6">
+					<div ng-show="entities.active()">
+						<img src="/static/images/round_spinner.png" alt="spinner"/>
+					</div>
+					<div ng-show="!entities.active()" ng-click="loadGrid('entities')">
+						<img src="/static/images/reload.png" alt="reload" class="pointer"/>
+					</div>
+					<div ng-hide="entities">
+						<alert type="error">{{entitiesalert}}</alert>
+					</div>
+					<div ng-show="entities" class="gridStyle" ng-grid="entitiesgrid">
+					</div>
 				</div>
-				<div ng-show="!entities.active()" ng-click="loadGrid('entities')">
-					<img src="/static/images/reload.png" alt="reload" class="pointer"/>
-				</div>
-				<div ng-hide="entities">
-					<alert type="error">{{entitiesalert}}</alert>
-				</div>
-				<div ng-show="entities" class="gridStyle" ng-grid="entitiesgrid">
+				<div class="span6">
+					<div ng-show="versions.active()">
+						<img src="/static/images/round_spinner.png" alt="spinner"/>
+					</div>
+					<div ng-show="!versions.active()" ng-click="loadGrid('versions')">
+						<img src="/static/images/reload.png" alt="reload" class="pointer"/>
+					</div>
+					<div ng-hide="versions">
+						<alert type="error">{{versionsalert}}</alert>
+					</div>
+					<div ng-show="versions" class="gridStyle" ng-grid="versionsgrid">
+					</div>				
 				</div>
 			</div>
-			<div class="span6">
-				<div ng-show="versions.active()">
-					<img src="/static/images/round_spinner.png" alt="spinner"/>
+			<div class="row-fluid">
+				<div class="span6">
+					<div ng-show="toponyms.active()">
+						<img src="/static/images/round_spinner.png" alt="spinner"/>
+					</div>
+					<div ng-show="!toponyms.active()" ng-click="loadGrid('toponyms')">
+						<img src="/static/images/reload.png" alt="reload" class="pointer"/>
+					</div>
+					<div ng-hide="toponyms">
+						<alert type="error">{{toponymsalert}}</alert>
+					</div>
+					<div ng-show="toponyms" class="gridStyle" ng-grid="toponymsgrid">
+					</div>				
 				</div>
-				<div ng-show="!versions.active()" ng-click="loadGrid('versions')">
-					<img src="/static/images/reload.png" alt="reload" class="pointer"/>
+				<div class="span6">
+					<div ng-show="categories.active()">
+						<img src="/static/images/round_spinner.png" alt="spinner"/>
+					</div>
+					<div ng-show="!categories.active()" ng-click="loadGrid('categories')">
+						<img src="/static/images/reload.png" alt="reload" class="pointer"/>
+					</div>
+					<div ng-hide="categories">
+						<alert type="error">{{categoriesalert}}</alert>
+					</div>
+					<div ng-show="categories" class="gridStyle" ng-grid="categoriesgrid">
+					</div>				
 				</div>
-				<div ng-hide="versions">
-					<alert type="error">{{versionsalert}}</alert>
-				</div>
-				<div ng-show="versions" class="gridStyle" ng-grid="versionsgrid">
-				</div>				
-			</div>
-		</div>
-		<div class="row-fluid">
-			<div class="span6">
-				<div ng-show="toponyms.active()">
-					<img src="/static/images/round_spinner.png" alt="spinner"/>
-				</div>
-				<div ng-show="!toponyms.active()" ng-click="loadGrid('toponyms')">
-					<img src="/static/images/reload.png" alt="reload" class="pointer"/>
-				</div>
-				<div ng-hide="toponyms">
-					<alert type="error">{{toponymsalert}}</alert>
-				</div>
-				<div ng-show="toponyms" class="gridStyle" ng-grid="toponymsgrid">
-				</div>				
-			</div>
-			<div class="span6">
-				<div ng-show="categories.active()">
-					<img src="/static/images/round_spinner.png" alt="spinner"/>
-				</div>
-				<div ng-show="!categories.active()" ng-click="loadGrid('categories')">
-					<img src="/static/images/reload.png" alt="reload" class="pointer"/>
-				</div>
-				<div ng-hide="categories">
-					<alert type="error">{{categoriesalert}}</alert>
-				</div>
-				<div ng-show="categories" class="gridStyle" ng-grid="categoriesgrid">
-				</div>				
 			</div>
 		</div>
 	</div>
