some helpful links into details for the start page

--- a/static/partials/main.html
+++ b/static/partials/main.html
@@ -2,13 +2,10 @@
 	<div class="span12">
 		<div class="row-fluid">
 			<div class="span4">
-				<h2>Statistik
-					
-				</h2>
-				<p>
-					Wie viele Datensätze beiehen sich auf Wien?
-					Wie viele Datensätze gibt es von der Statistik Austria?
-				</p>
+				<h2>Statistik</h2>
+				<p>Wie viele Datensätze beziehen sich auf <a href="#/dslist/toponyms/Wien">Wien</a>?</p>
+				<p>Wie viele Datensätze gibt es von der <a href="#/dslist/entities/Stadt Klagenfurt">Stadt Klagenfurt</a>?</p>
+				<p>Wie lautet die Kontaktadresse zu den rechtskräftigen Abgrenzung der Natura 2000 Gebiete laut Fauna-Flora-Habitat-Richtlinie?</p>
 				<p>
 					<a class="btn" href="#/statistic">Statistik »</a>
 				</p>
@@ -17,10 +14,8 @@
 				<h2>
 					Inkonsistenzen
 				</h2>
-				<p>
-					Wo gibt es nach Auswertung möglicherweise Fehler in den Datensätzen?
-					Welche Metadatensätze entsprechen nicht der Metadatenkonvention?
-				</p>
+				<p>Wo gibt es nach Auswertung möglicherweise Fehler in den Datensätzen?</p>
+				</p>Welche Metadatensätze entsprechen nicht der Metadatenkonvention?</p>
 				<p>
 					<a class="btn" href="#/tocheck">Auswertung »</a>
 				</p>
