some nicer landing page text

--- a/static/partials/main.html
+++ b/static/partials/main.html
@@ -3,9 +3,9 @@
 		<div class="row-fluid">
 			<div class="span4">
 				<h2>Statistik</h2>
-				<p>Wie viele Datensätze beziehen sich auf <a href="#/dslist/toponyms/Wien">Wien</a>?</p>
-				<p>Wie viele Datensätze gibt es von der <a href="#/dslist/entities/Stadt Klagenfurt">Stadt Klagenfurt</a>?</p>
-				<p>Wie lautet die Kontaktadresse zu den rechtskräftigen Abgrenzung der Natura 2000 Gebiete laut Fauna-Flora-Habitat-Richtlinie?</p>
+				<p>Welche Datensätze beziehen sich auf <a href="#/dslist/toponyms/Wien">Wien</a>?</p>
+				<p>Welche Datensätze gibt es von der <a href="#/dslist/entities/Stadt Klagenfurt">Stadt Klagenfurt</a>?</p>
+				<p>Wie lautet das <a href='#/dataset/["01485bc5-4e65-4d6e-9dee-9e091fb5316a"]'>Stimmenprotokoll der Nationalratswahl vom 28. September 2008?</a></p>
 				<p>
 					<a class="btn" href="#/statistic">Statistik »</a>
 				</p>
