--- a/static/partials/main.html
+++ b/static/partials/main.html
@@ -1,26 +1,26 @@
-<div class="row-fluid">
-	<div class="span12">
-		<div class="row-fluid">
-			<div class="span4">
+<div class="row clearfix">
+	<div class="col-md-12 column">
+		<div class="row clearfix">
+			<div class="col-md-4 column">
 				<h2>Statistik</h2>
 				<p>Welche Datensätze beziehen sich auf <a href="#/dslist/toponyms/Wien">Wien</a>?</p>
 				<p>Welche Datensätze gibt es von der <a href="#/dslist/entities/Stadt Klagenfurt">Stadt Klagenfurt</a>?</p>
 				<p>Wie lautet das <a href='#/dataset/["01485bc5-4e65-4d6e-9dee-9e091fb5316a"]'>Stimmenprotokoll der Nationalratswahl vom 28. September 2008?</a></p>
 				<p>
-					<a class="btn" href="#/statistic">Statistik »</a>
+					<a class="btn btn-default" href="#/statistic">Statistik »</a>
 				</p>
 			</div>
-			<div class="span4">
+			<div class="col-md-4 column">
 				<h2>
 					Inkonsistenzen
 				</h2>
 				<p>Wo gibt es nach Auswertung möglicherweise Fehler in den Datensätzen?</p>
 				</p>Welche Metadatensätze entsprechen nicht der Metadatenkonvention?</p>
 				<p>
-					<a class="btn" href="#/tocheck">Auswertung »</a>
+					<a class="btn btn-default" href="#/tocheck">Auswertung »</a>
 				</p>
 			</div>
-			<div class="span4">
+			<div class="col-md-4 column">
 				<h2>
 					Entwicklung der Datensätze
 				</h2>
@@ -28,7 +28,7 @@
 					Wann wurden die letzen Datensätze geändert?
 				</p>
 				<p>
-					<a class="btn" href="#/history">Historie »</a>
+					<a class="btn btn-default" href="#/history">Historie »</a>
 				</p>
 			</div>
 		</div>
