--- a/static/partials/dataset.html
+++ b/static/partials/dataset.html
@@ -1,10 +1,10 @@
 <div ng-controller="DataSetLoadControl">
 	<h2>Datensatzdetails</h2>
 		<div class="row-fluid">
-			<div class="span6">
+			<div class="col-md-6 column">
 				<div datasetdetails mdelements="mdelements"></div>
 			</div>
-			<div class="span6">
+			<div class="col-md-6 column">
 			</div>
 		</div>
 	</div>
