--- a/static/partials/statistic.html
+++ b/static/partials/statistic.html
@@ -1,8 +1,8 @@
-<div class="row-fluid">
+<div class="row clearfix">
 	<div class="span12">
 		<div ng-controller="TaxonomyControl">
-			<div class="row-fluid">
-				<div class="span6">
+			<div class="row clearfix">
+				<div class="col-md-6 column">
 					<div ng-show="entities.active()">
 						<img src="/static/images/round_spinner.png" alt="spinner"/>
 					</div>
@@ -15,7 +15,7 @@
 					<div ng-show="entities" class="gridStyle" ng-grid="entitiesgrid">
 					</div>
 				</div>
-				<div class="span6">
+				<div class="col-md-6 column">
 					<div ng-show="versions.active()">
 						<img src="/static/images/round_spinner.png" alt="spinner"/>
 					</div>
@@ -29,8 +29,8 @@
 					</div>				
 				</div>
 			</div>
-			<div class="row-fluid">
-				<div class="span6">
+			<div class="row clearfix">
+				<div class="col-md-6 column">
 					<div ng-show="toponyms.active()">
 						<img src="/static/images/round_spinner.png" alt="spinner"/>
 					</div>
@@ -43,7 +43,7 @@
 					<div ng-show="toponyms" class="gridStyle" ng-grid="toponymsgrid">
 					</div>				
 				</div>
-				<div class="span6">
+				<div class="col-md-6 column">
 					<div ng-show="categories.active()">
 						<img src="/static/images/round_spinner.png" alt="spinner"/>
 					</div>
