--- a/static/partials/statistic.html
+++ b/static/partials/statistic.html
@@ -1,5 +1,5 @@
 <div class="row clearfix">
-	<div class="span12">
+	<div class="col-md-12 column">
 		<div ng-controller="TaxonomyControl">
 			<div class="row clearfix">
 				<div class="col-md-6 column">
