re-order html text

--- a/static/partials/main.html
+++ b/static/partials/main.html
@@ -14,10 +14,10 @@
 				<h2>
 					Inkonsistenzen
 				</h2>
-				<p>Wo gibt es nach Auswertung möglicherweise Fehler in den Datensätzen?</p>
 				</p>Welche Metadatensätze entsprechen nicht der Metadatenkonvention?</p>
+				<p>Wo gibt es nach Auswertung möglicherweise Fehler in den Datensätzen?</p>
 				<p>
-					<a class="btn btn-default" href="#/tocheck">Auswertung »</a>
+					<a class="btn btn-default" href="#/check">Auswertung »</a>
 				</p>
 			</div>
 			<div class="col-md-4 column">
@@ -33,4 +33,4 @@
 			</div>
 		</div>
 	</div>
-</div>	
+</div>
