--- a/static/partials/dataset.html
+++ b/static/partials/dataset.html
@@ -1,10 +1,13 @@
-<div ng-controller="DataSetLoadControl">
-	<h2>Datensatzdetails</h2>
-		<div class="row-fluid">
-			<div class="col-md-6 column">
-				<div datasetdetails mdelements="mdelements"></div>
-			</div>
-			<div class="col-md-6 column">
+<div class="row clearfix">
+	<div class="col-md-12 column">
+		<div ng-controller="DataSetLoadControl">
+			<h2>Datensatzdetails</h2>
+			<div class="row clearfix">
+				<div class="col-md-6 column">
+					<div datasetdetails mdelements="mdelements"></div>
+				</div>
+				<div class="col-md-6 column">
+				</div>
 			</div>
 		</div>
 	</div>
