Various smaller fixes
* new promisetracker requires explicit call to .regsiter and .deregister
* location of hmtl-files on github changed, fix
* do not collect links in info-Records displayed on check detail area
* dynamically set the url parameter when clicking on an item in the grid.
  Still missing: position on matching item when called using an url-parameter

--- a/static/partials/checkdetails.html
+++ b/static/partials/checkdetails.html
@@ -42,7 +42,7 @@
 	<h5>Informationen</h5>
 	<table class="table">
 		<tbody>
-			<tr ng-repeat="checkelement in infoRecords | filter:Link | orderBy:['FieldID', 'Reason_Text']">
+			<tr ng-repeat="checkelement in infoRecords | orderBy:['FieldID', 'Reason_Text']">
 				<td>{{checkelement.Reason_Text}}</a></td>
 				<td><a ng-href="{{MetadataDescriptionUrl(version, checkelement.FieldID)}}" target="_blank">{{checkelement.FieldID}}</a></td>
 			</tr>
