use new html file - menu to select which analysis to show

--- a/static/partials/main.html
+++ b/static/partials/main.html
@@ -17,7 +17,7 @@
 				</p>Welche Metadatensätze entsprechen nicht der Metadatenkonvention?</p>
 				<p>Wo gibt es nach Auswertung möglicherweise Fehler in den Datensätzen?</p>
 				<p>
-					<a class="btn btn-default" href="#/check">Auswertung »</a>
+					<a class="btn btn-default" href="#/inconsistencies">Auswertung »</a>
 				</p>
 			</div>
 			<div class="col-md-4 column">
