add an003 template

--- a/static/partials/inconsistencies.html
+++ b/static/partials/inconsistencies.html
@@ -4,11 +4,15 @@
 			Mögliche Inkosistenzen nach <a class="btn btn-default" href="#/check">Check der Metadaten</a>
 		</p>
 		<p>
-			<a class="btn btn-default" href="#/an/an001">AN001 »</a>
+			Welche Ressourcen-Links sind in den <a class="btn btn-default" href="#/an/an001">Datensätzen mehrfach</a> vorhanden?
 		</p>
 		<p>
-			<a class="btn btn-default" href="#/an/an002">AN002 »</a>
+			Welche Datensätze haben <a class="btn btn-default" href="#/an/an002">identische Ressourcen-Links</a> ?
 		</p>
+		<p>
+			Welche Links können <a class="btn btn-default" href="#/an/an003">nicht aufgelöst</a> werden?
+		</p>
+		
 	</div>
 	<div class="col-md-4 column">
 		
