Add display of links which cannot get resolved

--- a/static/partials/an003.html
+++ b/static/partials/an003.html
@@ -1,9 +1,9 @@
 <div class="row clearfix">
 	<div class="col-md-12 column">
 		<h3>
-			Mögliche Metadatenfehler
+			Übersicht über nicht auflösbare URLs
 		</h3>
-		<div ng-controller="TaxonomyCheckControl">
+		<div ng-controller="AN003Control">
 			<div class="row clearfix">
 				<div class="col-md-6 column">
 					<div ng-show="entities.active()">
@@ -21,7 +21,6 @@
 				<div class="col-md-6 column">
 				</div>
 			</div>
-
 		</div>
 	</div>
 </div>
