clean up of dummy text

--- a/static/partials/an003details.html
+++ b/static/partials/an003details.html
@@ -1,6 +1,9 @@
 <div ng-controller="AN003DetailsControl">
 	<div class="row clearfix">
 		<div class="col-md-12 column" >
+			<h2>
+				Analyse nicht auflösbarer URLs <small>in Resourcenlinks, Links auf Kontakte oder weiterführenden Informationen</small>
+			</h2>
 			<h3>
 				{{contextheading}} <small>{{subset}}</small>
 			</h3>
